--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,16 +1,31 @@
-ignore.path=
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_create_2e_tests=false
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.configuration_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.customSuite_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_groups_2e_ask=false
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=false
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=assets/js
+browser.reload.on.save=true
+code.analysis.excludes=
+file.reference.mashshare-github-master-.git=.git
+file.reference.mashshare-github-master-node_modules=node_modules
+ignore.path=\
+    ${file.reference.mashshare-github-master-node_modules}:\
+    ${file.reference.mashshare-github-master-.git}
 include.path=\
     ${php.global.include.path}
 php.version=PHP_5
-phpunit.bootstrap=
-phpunit.bootstrap.create.tests=false
-phpunit.configuration=
-phpunit.run.test.files=false
-phpunit.script=
-phpunit.suite=
-phpunit.test.groups.ask=false
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=true
+testing.providers=
 web.root=.
