= 2.5.3 not released = * Tweak: Tested up to WP 4.4.2 * Tweak: Rewrite sharedcount class for using phpunit test class * Tweak: Clean up code and several performance improvements * Fix: Undefined var 'mash_networks' on first installation * Fix: Disabling cache not working for shortcode buttons with custom url * New: Move 'Exclude' option to settings->Visual->Location * New: Show usage tracking notice only for administrators

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,9 +4,22 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
 auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.expand-tabs=true
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width=4
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.spaces-per-tab=4
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=8
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-line-wrap=none
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=project
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceWithinArrayDeclParens=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceWithinCatchParens=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceWithinForParens=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceWithinIfParens=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceWithinSwitchParens=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceWithinWhileParens=true
 auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
 auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_create_2e_tests=false
-auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_enabled=true
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_enabled=false
 auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_path=tests/bootstrap.php
 auxiliary.org-netbeans-modules-php-phpunit.configuration_2e_enabled=false
 auxiliary.org-netbeans-modules-php-phpunit.configuration_2e_path=
