* New: Share button support for Google AMP Accelerated Mobile Pages when using the WordPress official AMP plugin https://wordpress.org/plugins/amp/ * New: Fakecount support RTL languages like arabic and hebraic * New: Allow the use of css style concatenating with BWP Minify (Better WordPress Minify) or Autoptimize plugin * Tweak: Add debug constant * Tweak: Clean up code * Fix: $post undefined message * Fix: remove !important css declarations in AMP inline style declaration

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mashsharer",
-  "version": "2.5.3",
+  "version": "2.5.4",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.6.0",
@@ -13,6 +13,7 @@
     "grunt-version": ">=0.3.1",
     "load-grunt-tasks": "~3.1.0",
     "time-grunt": "~1.1.0",
-    "load-grunt-config": "*"
+    "load-grunt-config": "*",
+    "grunt-string-replace": "~1.2.1"
   }
 }
