--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,19 +4,6 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
 auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
-auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.expand-tabs=true
-auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width=4
-auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.spaces-per-tab=4
-auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=8
-auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
-auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-line-wrap=none
-auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=project
-auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceWithinArrayDeclParens=true
-auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceWithinCatchParens=true
-auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceWithinForParens=true
-auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceWithinIfParens=true
-auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceWithinSwitchParens=true
-auxiliary.org-netbeans-modules-editor-indent.text.x-php5.CodeStyle.project.spaceWithinWhileParens=true
 auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
 auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_create_2e_tests=false
 auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_enabled=false
@@ -37,12 +24,14 @@ browser.reload.on.save=true
 code.analysis.excludes=
 file.reference.mashshare-github-master-.git=.git
 file.reference.mashshare-github-master-bin=bin
+file.reference.mashshare-github-master-nbproject=nbproject
 file.reference.mashshare-github-master-node_modules=node_modules
 file.reference.mashshare-github-master-tests=tests
 ignore.path=\
     ${file.reference.mashshare-github-master-node_modules}:\
     ${file.reference.mashshare-github-master-.git}:\
-    ${file.reference.mashshare-github-master-bin}
+    ${file.reference.mashshare-github-master-bin}:\
+    ${file.reference.mashshare-github-master-nbproject}
 include.path=\
     ${php.global.include.path}
 php.version=PHP_53
@@ -50,6 +39,5 @@ source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=true
-test.src.dir=${file.reference.mashshare-github-master-tests}
-testing.providers=PhpUnit
+testing.providers=
 web.root=.
