--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mashsharer",
-  "version": "2.5.4",
+  "version": "2.5.5",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.6.0",
@@ -10,10 +10,11 @@
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-phplint": "~0.0.5",
+    "grunt-string-replace": "~1.2.1",
     "grunt-version": ">=0.3.1",
-    "load-grunt-tasks": "~3.1.0",
-    "time-grunt": "~1.1.0",
+    "grunt-wp-deploy": "^1.1.0",
     "load-grunt-config": "*",
-    "grunt-string-replace": "~1.2.1"
+    "load-grunt-tasks": "~3.1.0",
+    "time-grunt": "~1.1.0"
   }
 }
