--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,6 @@
 # .scrutinizer.yml
 filter:
-    excluded_paths: [vendor/*, tests/*, .tx/*, languages/*, includes/libraries/*, bin/*, assets/*, templates/* ]
+    excluded_paths: [vendor/*, tests/*, .tx/*, languages/*, includes/libraries/*, bin/*, assets/*, templates/*, includes/admin/meta-box/js/* ]
 before_commands:
     - 'composer install --dev --prefer-source'
 tools:
