--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ language: php
 sudo: false
 
 php:
-- 5.3
-- 5.4
-- 5.5
-- 5.6
+#- 5.3
+#- 5.4
+#- 5.5
+#- 5.6
 - 7.0
-- hhvm
+#- hhvm
 
 env:
 - WP_VERSION=latest WP_MULTISITE=0
