--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,7 @@ language: php
 sudo: false
 
 php:
-#- 5.3
-#- 5.4
-#- 5.5
-#- 5.6
 - 7.0
-#- hhvm
 
 env:
 - WP_VERSION=latest WP_MULTISITE=0
@@ -21,8 +16,8 @@ env:
 
 matrix:
   include:
-    - php: 5.3
-      env: WP_VERSION=latest WP_MULTISITE=1
+#    - php: 5.3
+#      env: WP_VERSION=latest WP_MULTISITE=1
   exclude:
     - php: hhvm
       env: WP_VERSION=4.0 WP_MULTISITE=0
