--- a/.travis.yml
+++ b/.travis.yml
@@ -12,20 +12,20 @@ php:
 
 env:
 - WP_VERSION=latest WP_MULTISITE=0
-- WP_VERSION=4.4 WP_MULTISITE=0
-- WP_VERSION=4.3 WP_MULTISITE=0
-- WP_VERSION=4.2 WP_MULTISITE=0
+#- WP_VERSION=4.4 WP_MULTISITE=0
+#- WP_VERSION=4.3 WP_MULTISITE=0
+#- WP_VERSION=4.2 WP_MULTISITE=0
 - WP_VERSION=4.1 WP_MULTISITE=0
 - WP_VERSION=4.0 WP_MULTISITE=0
 
 
-matrix:
-  include:
-    - php: 5.3
-      env: WP_VERSION=latest WP_MULTISITE=1
-  exclude:
-    - php: hhvm
-      env: WP_VERSION=4.0 WP_MULTISITE=0
+#matrix:
+#  include:
+#    - php: 5.3
+#      env: WP_VERSION=latest WP_MULTISITE=1
+#  exclude:
+#    - php: hhvm
+#      env: WP_VERSION=4.0 WP_MULTISITE=0
 
 before_script:
 - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
