--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ php:
 - hhvm
 
 env:
-- WP_VERSION=latest WP_MULTISITE=0
+#- WP_VERSION=latest WP_MULTISITE=0
 #- WP_VERSION=4.4 WP_MULTISITE=0
 #- WP_VERSION=4.3 WP_MULTISITE=0
 #- WP_VERSION=4.2 WP_MULTISITE=0
