--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ php:
 - hhvm
 
 env:
-#- WP_VERSION=latest WP_MULTISITE=0
-#- WP_VERSION=4.4 WP_MULTISITE=0
-#- WP_VERSION=4.3 WP_MULTISITE=0
-#- WP_VERSION=4.2 WP_MULTISITE=0
-- WP_VERSION=4.1 WP_MULTISITE=0
-- WP_VERSION=4.0 WP_MULTISITE=0
+- WP_VERSION=latest WP_MULTISITE=0
+- WP_VERSION=4.4 WP_MULTISITE=0
+- WP_VERSION=4.3 WP_MULTISITE=0
+- WP_VERSION=4.2 WP_MULTISITE=0
+#- WP_VERSION=4.1 WP_MULTISITE=0
+#- WP_VERSION=4.0 WP_MULTISITE=0
 
 
 #matrix:
