--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require-dev": {
         "satooshi/php-coveralls": "dev-master",
         "phpunit/phpunit": "5.5.6",
-        "phpunit/php-invoker": "1.1.3"
+        "phpunit/php-invoker": "1.1.3",
+        "phpunit/php-token-stream": "1.4.6"
     },
     "minimum-stability": "dev"
 }
