--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: php
 
+install: composer install --dev
+
 sudo: false
 
 php:
@@ -7,8 +9,8 @@ php:
 #- 5.4
 #- 5.5
 #- 5.6
-- composer
 - 7.0
+- composer
 - hhvm
 
 env:
