--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ language: php
 sudo: false
 
 php:
-- 5.3
+#- 5.3
 - 5.4
-- 5.5
-- 5.6
-- 7.0
+#- 5.5
+#- 5.6
+#- 7.0
 - hhvm
 
 env:
@@ -21,13 +21,13 @@ env:
 #- WP_VERSION=4.0 WP_MULTISITE=0
 
 
-#matrix:
-#  include:
-#    - php: 5.3
-#      env: WP_VERSION=latest WP_MULTISITE=1
-#  exclude:
-#    - php: hhvm
-#      env: WP_VERSION=4.0 WP_MULTISITE=0
+matrix:
+  include:
+    - php: 5.3
+      env: WP_VERSION=latest WP_MULTISITE=1
+  exclude:
+    - php: hhvm
+      env: WP_VERSION=4.0 WP_MULTISITE=0
 
 before_script:
 - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
