--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,13 @@ env:
 #- WP_VERSION=4.0 WP_MULTISITE=0
 
 
-matrix:
-  include:
-    - php: 5.3
-      env: WP_VERSION=latest WP_MULTISITE=1
-  exclude:
-    - php: hhvm
-      env: WP_VERSION=4.0 WP_MULTISITE=0
+#matrix:
+#  include:
+#    - php: 5.3
+#      env: WP_VERSION=latest WP_MULTISITE=1
+#  exclude:
+#    - php: hhvm
+#      env: WP_VERSION=4.0 WP_MULTISITE=0
 
 before_script:
 - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
