--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ sudo: false
 php:
 #- 5.3
 - 5.4
-#- 5.5
-#- 5.6
-#- 7.0
-#- hhvm
+- 5.5
+- 5.6
+- 7.0
+- hhvm
 
 env:
 #- WP_VERSION=latest WP_MULTISITE=0
