--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: php
 #install: composer install --dev
 
 sudo: false
+dist: trusty
 
 php:
 #- 5.3
@@ -12,14 +13,40 @@ php:
 - 7.0
 - hhvm
 
-env:
-#- WP_VERSION=latest WP_MULTISITE=0
-- WP_VERSION=4.4 WP_MULTISITE=0
-- WP_VERSION=4.3 WP_MULTISITE=0
-- WP_VERSION=4.2 WP_MULTISITE=0
-- WP_VERSION=4.1 WP_MULTISITE=0
-#- WP_VERSION=4.0 WP_MULTISITE=0
+#env:
+##- WP_VERSION=latest WP_MULTISITE=0
+#- WP_VERSION=4.4 WP_MULTISITE=0
+#- WP_VERSION=4.3 WP_MULTISITE=0
+#- WP_VERSION=4.2 WP_MULTISITE=0
+#- WP_VERSION=4.1 WP_MULTISITE=0
+##- WP_VERSION=4.0 WP_MULTISITE=0
 
+env:
+- WP_VERSION=latest WP_MULTISITE=0
+- WP_VERSION=4.7 WP_MULTISITE=0
+- WP_VERSION=4.6 WP_MULTISITE=0
+- WP_VERSION=4.5 WP_MULTISITE=0
+- WP_VERSION=4.4 WP_MULTISITE=0
+
+matrix:
+  include:
+    - php: 5.6
+      env: WP_VERSION=latest WP_MULTISITE=1
+    - php: 5.3
+      env: WP_VERSION=latest WP_MULTISITE=0
+      dist: precise
+    - php: 5.3
+      env: WP_VERSION=4.7 WP_MULTISITE=0
+      dist: precise
+    - php: 5.3
+      env: WP_VERSION=4.6 WP_MULTISITE=0
+      dist: precise
+    - php: 5.3
+      env: WP_VERSION=4.5 WP_MULTISITE=0
+      dist: precise
+    - php: 5.3
+      env: WP_VERSION=4.4 WP_MULTISITE=0
+      dist: precise
 
 #matrix:
 #  include:
