--- a/.travis.yml
+++ b/.travis.yml
@@ -58,40 +58,49 @@ matrix:
 
 before_script:
 - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+- export PATH="$HOME/.composer/vendor/bin:$PATH"
+- |
+    if [[ ${TRAVIS_PHP_VERSION:0:2} == "7." ]]; then
+      composer global require "phpunit/phpunit=5.7.*"
+    else
+      composer global require "phpunit/phpunit=4.8.*"
+    fi
 
 script:
-- if [[ $TRAVIS_PHP_VERSION != 'hhvm' && ( $TRAVIS_PHP_VERSION != '5.5'|| $WP_VERSION != 'latest'
-  || $WP_MULTISITE != '0' ) ]]; then phpenv config-rm xdebug.ini; fi
+- phpenv config-rm xdebug.ini
+- phpunit
+#- if [[ $TRAVIS_PHP_VERSION != 'hhvm' && ( $TRAVIS_PHP_VERSION != '5.5'|| $WP_VERSION != 'latest'
+#  || $WP_MULTISITE != '0' ) ]]; then phpenv config-rm xdebug.ini; fi
 #- if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
 #  ]]; then phpunit --coverage-clover=coverage.clover; else phpunit; fi
 
-- |
-  # Install the specified version of PHPUnit depending on the PHP version:
-  case "$TRAVIS_PHP_VERSION" in
-    7.1|7.0|hhvm|nightly)
-      echo "Using PHPUnit 5.7"
-      composer global require "phpunit/phpunit=5.7.*"
-      ;;
-    5.6|5.5|5.4|5.3)
-      echo "Using PHPUnit 4.8"
-      composer global require "phpunit/phpunit=4.8.*"
-      ;;
-    5.2)
-      # Do nothing, use default PHPUnit 3.6.x
-      echo "Using default PHPUnit, hopefully 3.6"
-      ;;
-    *)
-      echo "No PHPUnit version handling for PHP version $TRAVIS_PHP_VERSION"
-      exit 1
-      ;;
-  esac
+#- |
+#  # Install the specified version of PHPUnit depending on the PHP version:
+#  case "$TRAVIS_PHP_VERSION" in
+#    7.1|7.0|hhvm|nightly)
+#      echo "Using PHPUnit 5.7"
+#      composer global require "phpunit/phpunit=5.7.*"
+#      ;;
+#    5.6|5.5|5.4|5.3)
+#      echo "Using PHPUnit 4.8"
+#      composer global require "phpunit/phpunit=4.8.*"
+#      ;;
+#    5.2)
+#      # Do nothing, use default PHPUnit 3.6.x
+#      echo "Using default PHPUnit, hopefully 3.6"
+#      ;;
+#    *)
+#      echo "No PHPUnit version handling for PHP version $TRAVIS_PHP_VERSION"
+#      exit 1
+#      ;;
+#  esac
                   
-after_script:
-- if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
-  ]]; then wget https://scrutinizer-ci.com/ocular.phar; fi
-- if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
-  ]]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover;
-  fi
+#after_script:
+#- if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
+#  ]]; then wget https://scrutinizer-ci.com/ocular.phar; fi
+#- if [[ $TRAVIS_PHP_VERSION = '5.5' && $WP_VERSION = 'latest' && $WP_MULTISITE = '0'
+#  ]]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover;
+#  fi
 
 branches:
   only:
