--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "mashsharer",
-  "version": "3.7.2",
+  "version": "3.7.3",
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-compress": "~0.13.0",
     "grunt-contrib-copy": "~0.7.0",
     "grunt-contrib-cssmin": "~0.12.2",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-phplint": "~0.0.5",
+    "grunt-phplint": "^0.1.0",
     "grunt-string-replace": "~1.2.1",
     "grunt-version": ">=0.3.1",
     "grunt-wp-deploy": "^1.1.0",
