--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,15 @@
         "composer/installers": "~1.0"
     },
     "require-dev": {
-        "satooshi/php-coveralls": "dev-master",
-        "phpunit/phpunit": "5.5.6",
-        "phpunit/php-invoker": "1.1.3",
-        "phpunit/php-token-stream": "1.4.6"
+        "dealerdirect/phpcodesniffer-composer-installer": "*",
+        "phpcompatibility/php-compatibility": "*",
+        "wp-coding-standards/wpcs": "*"
     },
-    "minimum-stability": "dev"
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
+    }
 }
+
+
